added section hero

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
 <body class="main__body">
   <!-- Header -->
   @@include('./html/_header.html')
+  @@include('./html/_hero.html')
 
   <!-- Main Page -->
   <main></main>
