added new sections

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
   <!-- Header -->
   @@include('./html/_header.html')
   @@include('./html/_hero.html')
+  @@include('./html/_about.html')
+  @@include('./html/_leaders.html')
 
   <!-- Main Page -->
   <main></main>
