--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,8 @@
   @@include('./html/_hero.html')
   @@include('./html/_about.html')
   @@include('./html/_leaders.html')
+  @@include('./html/_services.html')
+  @@include('./html/_calculation.html')
 
   <!-- Main Page -->
   <main></main>
