added new sections

--- a/src/html/_footer.html
+++ b/src/html/_footer.html
@@ -1,5 +1,120 @@
-<footer>
-    <div class="container">
-        <div class="footer">Footer</div>
+<footer class="footer">
+  <div class="container">
+    <div class="footer__inner">
+      <div class="footer__top">
+        <div class="footer__lists">
+          <ul class="footer__list">
+            <li class="footer__item">
+              <a class="footer__item-phone" href="tel:83432472420">
+                8 (343) 247-24-20
+              </a>
+
+              <a class="footer__item-mail" href="mailto:info@kiselevgroup.com">
+                info@kiselevgroup.com
+              </a>
+            </li>
+
+            <li class="footer__item">
+              <h4 class="footer__item-title">
+                Директор KISELEV GROUP
+              </h4>
+
+              <p class="footer__item-name">
+                Константин Киселев
+              </p>
+
+              <a class="footer__item-name" href="tel:+79222269977">
+                +7 (922) 226-99-77
+              </a>
+            </li>
+
+            <li class="footer__item">
+              <h4 class="footer__item-title">
+                БЭК-Офис
+              </h4>
+
+              <p class="footer__item-name">
+                г. Екатеринбург, ул. Щорса, д.57, оф.6
+              </p>
+            </li>
+          </ul>
+
+          <ul class="footer__list">
+            <li class="footer__item">
+              <h5 class="footer__item-label">
+                Юридический адрес:
+              </h5>
+
+              <p class="footer__item-text">РФ, 622016, обл. Свердловская,
+                г. Нижний Тагил, ул. Космонавтов, д. 13</p>
+              <p class="footer__item-text">ИНН: 6623120096</p>
+              <p class="footer__item-text">КПП: 662301001</p>
+              <p class="footer__item-text">ОРГН: 1169658146459</p>
+            </li>
+
+            <li class="footer__item">
+              <h5 class="footer__item-label">
+                Расчетный счет:
+              </h5>
+
+              <p class="footer__item-text">40702810010000064184</p>
+            </li>
+
+            <li class="footer__item">
+              <h5 class="footer__item-label">
+                Корпоративный счет:
+              </h5>
+
+              <p class="footer__item-text">30101810145250000974</p>
+              <p class="footer__item-text">БИК: 044525974</p>
+              <p class="footer__item-text">АО «Тинькофф Банк», г. Москва</p>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer__socials">
+          <h4 class="footer__socials-title">
+            Подписывайтесь на канал ютуб <br>
+            и другие соц.медиа
+          </h4>
+
+          <ul class="footer__socials-list">
+            <li class="footer__socials-item">
+              <a class="footer__socials-link" href="#">
+                <img class="footer__socials-img" src="./img/socials/socials-1.svg" alt="">
+              </a>
+            </li>
+
+            <li class="footer__socials-item">
+              <a class="footer__socials-link" href="#">
+                <img class="footer__socials-img" src="./img/socials/socials-2.svg" alt="">
+              </a>
+            </li>
+
+            <li class="footer__socials-item">
+              <a class="footer__socials-link" href="#">
+                <img class="footer__socials-img" src="./img/socials/socials-3.svg" alt="">
+              </a>
+            </li>
+
+            <li class="footer__socials-item">
+              <a class="footer__socials-link" href="#">
+                <img class="footer__socials-img" src="./img/socials/socials-4.svg" alt="">
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="footer__bottom">
+        <p class="footer__bottom-text">
+          Данный сайт носит информационно-справочный характер и не является публичной офертой
+        </p>
+
+        <a class="footer__bottom-link" href="#">
+          Политика конфиденциальности
+        </a>
+      </div>
     </div>
+  </div>
 </footer>
