added new sections steps

--- a/src/integrated-implementation.html
+++ b/src/integrated-implementation.html
@@ -8,6 +8,7 @@
   <title>Index</title>
   <link rel="stylesheet" href="./css/style.min.css">
   <link rel="stylesheet" href="./css/swiper-bundle.min.css">
+  <link rel="stylesheet" href="./css/aos.css">
 </head>
 
 <body class="main__body">
@@ -32,6 +33,7 @@
 </body>
 
 <script src="./js/swiper-bundle.min.js"></script>
+<script src="./js/aos.js"></script>
 <script src="./js/scripts.min.js"></script>
 
 </html>
