fixed new details

--- a/src/html/_crm.html
+++ b/src/html/_crm.html
@@ -24,7 +24,7 @@
 
           <div class="tabs__content">
             <div class="tabs__content-item">
-              <ul class="crm__crm-list">
+              <!-- <ul class="crm__crm-list">
                 <li class="crm__crm-item">Чаты и Видеозвонки </li>
                 <li class="crm__crm-item">Соцсеть компании</li>
                 <li class="crm__crm-item">Календари</li>
@@ -33,12 +33,12 @@
                 <li class="crm__crm-item">Почта</li>
                 <li class="crm__crm-item">Группы</li>
                 <li class="crm__crm-item">HR</li>
-              </ul>
+              </ul> -->
 
-              <img class="crm__tab-img" src="img/crm/crm-img.png" alt="crm">
+              <img class="crm__tab-img" src="img/crm/crm-tab-1.png" alt="crm">
             </div>
             <div class="tabs__content-item">
-              <ul class="crm__crm-list">
+              <!-- <ul class="crm__crm-list">
                 <li class="crm__crm-item">Чаты и Видеозвонки </li>
                 <li class="crm__crm-item">Соцсеть компании</li>
                 <li class="crm__crm-item">Календари</li>
@@ -47,12 +47,12 @@
                 <li class="crm__crm-item">Почта</li>
                 <li class="crm__crm-item">Группы</li>
                 <li class="crm__crm-item">HR</li>
-              </ul>
+              </ul> -->
 
-              <img class="crm__tab-img" src="img/crm/crm-img.png" alt="crm">
+              <img class="crm__tab-img" src="img/crm/crm-tab-2.png" alt="crm">
             </div>
             <div class="tabs__content-item">
-              <ul class="crm__crm-list">
+              <!-- <ul class="crm__crm-list">
                 <li class="crm__crm-item">Чаты и Видеозвонки </li>
                 <li class="crm__crm-item">Соцсеть компании</li>
                 <li class="crm__crm-item">Календари</li>
@@ -61,12 +61,12 @@
                 <li class="crm__crm-item">Почта</li>
                 <li class="crm__crm-item">Группы</li>
                 <li class="crm__crm-item">HR</li>
-              </ul>
+              </ul> -->
 
-              <img class="crm__tab-img" src="img/crm/crm-img.png" alt="crm">
+              <img class="crm__tab-img" src="img/crm/crm-tab-3.png" alt="crm">
             </div>
             <div class="tabs__content-item">
-              <ul class="crm__crm-list">
+              <!-- <ul class="crm__crm-list">
                 <li class="crm__crm-item">Чаты и Видеозвонки </li>
                 <li class="crm__crm-item">Соцсеть компании</li>
                 <li class="crm__crm-item">Календари</li>
@@ -75,12 +75,12 @@
                 <li class="crm__crm-item">Почта</li>
                 <li class="crm__crm-item">Группы</li>
                 <li class="crm__crm-item">HR</li>
-              </ul>
+              </ul> -->
 
-              <img class="crm__tab-img" src="img/crm/crm-img.png" alt="crm">
+              <img class="crm__tab-img" src="img/crm/crm-tab-4.png" alt="crm">
             </div>
             <div class="tabs__content-item">
-              <ul class="crm__crm-list">
+              <!-- <ul class="crm__crm-list">
                 <li class="crm__crm-item">Чаты и Видеозвонки </li>
                 <li class="crm__crm-item">Соцсеть компании</li>
                 <li class="crm__crm-item">Календари</li>
@@ -89,9 +89,9 @@
                 <li class="crm__crm-item">Почта</li>
                 <li class="crm__crm-item">Группы</li>
                 <li class="crm__crm-item">HR</li>
-              </ul>
+              </ul> -->
 
-              <img class="crm__tab-img" src="img/crm/crm-img.png" alt="crm">
+              <img class="crm__tab-img" src="img/crm/crm-tab-5.png" alt="crm">
             </div>
           </div>
         </div>
