--- a/src/html/_leaders.html
+++ b/src/html/_leaders.html
@@ -1,94 +1,175 @@
 <div class="leaders">
   <div class="container">
     <div class="leaders__inner">
-      <div class="leaders__info">
+      <div class="leaders__info accordion">
         <div class="leaders__rows">
-          <div class="leaders__row leaders__row--open">
-            <h4 class="leaders__row-title">
-              Лидеры рынка
+          <div class="leaders__row active" data-accordion-item>
 
-              <span>
-                <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path
-                    d="M15 23.5781H9C3.57 23.5781 1.25 21.2581 1.25 15.8281V9.82812C1.25 4.39813 3.57 2.07812 9 2.07812H15C20.43 2.07812 22.75 4.39813 22.75 9.82812V15.8281C22.75 21.2581 20.43 23.5781 15 23.5781ZM9 3.57812C4.39 3.57812 2.75 5.21812 2.75 9.82812V15.8281C2.75 20.4381 4.39 22.0781 9 22.0781H15C19.61 22.0781 21.25 20.4381 21.25 15.8281V9.82812C21.25 5.21812 19.61 3.57812 15 3.57812H9Z"
-                    fill="#F4AD7F" />
-                  <path
-                    d="M10.7397 17.1044C10.5497 17.1044 10.3597 17.0344 10.2097 16.8844C9.91969 16.5944 9.91969 16.1144 10.2097 15.8244L13.2097 12.8244L10.2097 9.82437C9.91969 9.53437 9.91969 9.05437 10.2097 8.76438C10.4997 8.47438 10.9797 8.47438 11.2697 8.76438L14.7997 12.2944C15.0897 12.5844 15.0897 13.0644 14.7997 13.3544L11.2697 16.8844C11.1197 17.0344 10.9297 17.1044 10.7397 17.1044Z"
-                    fill="#F4AD7F" />
-                </svg>
+            <div class="leaders__row-header">
+              <h4 class="leaders__row-title">
+                Лидеры рынка
 
-              </span>
-            </h4>
+                <span>
+                  <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      d="M15 23.5781H9C3.57 23.5781 1.25 21.2581 1.25 15.8281V9.82812C1.25 4.39813 3.57 2.07812 9 2.07812H15C20.43 2.07812 22.75 4.39813 22.75 9.82812V15.8281C22.75 21.2581 20.43 23.5781 15 23.5781ZM9 3.57812C4.39 3.57812 2.75 5.21812 2.75 9.82812V15.8281C2.75 20.4381 4.39 22.0781 9 22.0781H15C19.61 22.0781 21.25 20.4381 21.25 15.8281V9.82812C21.25 5.21812 19.61 3.57812 15 3.57812H9Z"
+                      fill="#F4AD7F" />
+                    <path
+                      d="M10.7397 17.1044C10.5497 17.1044 10.3597 17.0344 10.2097 16.8844C9.91969 16.5944 9.91969 16.1144 10.2097 15.8244L13.2097 12.8244L10.2097 9.82437C9.91969 9.53437 9.91969 9.05437 10.2097 8.76438C10.4997 8.47438 10.9797 8.47438 11.2697 8.76438L14.7997 12.2944C15.0897 12.5844 15.0897 13.0644 14.7997 13.3544L11.2697 16.8844C11.1197 17.0344 10.9297 17.1044 10.7397 17.1044Z"
+                      fill="#F4AD7F" />
+                  </svg>
 
-            <p class="leaders__row-descr">
-              Мы внедряем БИТРИКС24, это СRМ система которая занимает первое место среди инструментов для автоматизации
-              бизнеса. Битрикс24-это уникальный продукт который подходит практически для всех сфер бизнеса.
-            </p>
+                </span>
+              </h4>
+
+              <p class="leaders__row-descr">
+                Мы внедряем БИТРИКС24, это СRМ система которая занимает первое место среди инструментов для
+                автоматизации
+                бизнеса. Битрикс24-это уникальный продукт который подходит практически для всех сфер бизнеса.
+              </p>
+            </div>
+
+
+            <div class="leaders__row-content">
+              <div class="leaders__pictures">
+                <img class="leaders__pic" src="./img/leaders/leaders-1.png" alt="">
+                <img class="leaders__pic" src="./img/leaders/leaders-2.png" alt="">
+              </div>
+            </div>
           </div>
 
-          <div class="leaders__row">
-            <h4 class="leaders__row-title">
-              Золотые партнеры
+          <div class="leaders__row" data-accordion-item>
 
-              <span>
-                <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path
-                    d="M15 23.5781H9C3.57 23.5781 1.25 21.2581 1.25 15.8281V9.82812C1.25 4.39813 3.57 2.07812 9 2.07812H15C20.43 2.07812 22.75 4.39813 22.75 9.82812V15.8281C22.75 21.2581 20.43 23.5781 15 23.5781ZM9 3.57812C4.39 3.57812 2.75 5.21812 2.75 9.82812V15.8281C2.75 20.4381 4.39 22.0781 9 22.0781H15C19.61 22.0781 21.25 20.4381 21.25 15.8281V9.82812C21.25 5.21812 19.61 3.57812 15 3.57812H9Z"
-                    fill="#F4AD7F" />
-                  <path
-                    d="M10.7397 17.1044C10.5497 17.1044 10.3597 17.0344 10.2097 16.8844C9.91969 16.5944 9.91969 16.1144 10.2097 15.8244L13.2097 12.8244L10.2097 9.82437C9.91969 9.53437 9.91969 9.05437 10.2097 8.76438C10.4997 8.47438 10.9797 8.47438 11.2697 8.76438L14.7997 12.2944C15.0897 12.5844 15.0897 13.0644 14.7997 13.3544L11.2697 16.8844C11.1197 17.0344 10.9297 17.1044 10.7397 17.1044Z"
-                    fill="#F4AD7F" />
-                </svg>
+            <div class="leaders__row-header">
+              <h4 class="leaders__row-title">
+                Золотые партнеры
 
-              </span>
-            </h4>
+                <span>
+                  <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      d="M15 23.5781H9C3.57 23.5781 1.25 21.2581 1.25 15.8281V9.82812C1.25 4.39813 3.57 2.07812 9 2.07812H15C20.43 2.07812 22.75 4.39813 22.75 9.82812V15.8281C22.75 21.2581 20.43 23.5781 15 23.5781ZM9 3.57812C4.39 3.57812 2.75 5.21812 2.75 9.82812V15.8281C2.75 20.4381 4.39 22.0781 9 22.0781H15C19.61 22.0781 21.25 20.4381 21.25 15.8281V9.82812C21.25 5.21812 19.61 3.57812 15 3.57812H9Z"
+                      fill="#F4AD7F" />
+                    <path
+                      d="M10.7397 17.1044C10.5497 17.1044 10.3597 17.0344 10.2097 16.8844C9.91969 16.5944 9.91969 16.1144 10.2097 15.8244L13.2097 12.8244L10.2097 9.82437C9.91969 9.53437 9.91969 9.05437 10.2097 8.76438C10.4997 8.47438 10.9797 8.47438 11.2697 8.76438L14.7997 12.2944C15.0897 12.5844 15.0897 13.0644 14.7997 13.3544L11.2697 16.8844C11.1197 17.0344 10.9297 17.1044 10.7397 17.1044Z"
+                      fill="#F4AD7F" />
+                  </svg>
 
+                </span>
+              </h4>
+
+              <p class="leaders__row-descr">
+                Мы являемся ЗОЛОТЫМ сертифицированным партнером Битрикс24.
+              </p>
+
+              <p class="leaders__row-descr">
+                Наша компания имеет богатый опыт сложных внедрений и отмечена высшим партнерским статусом
+              </p>
+            </div>
+
+
+            <div class="leaders__row-content">
+              <div class="leaders__pictures">
+                <img class="leaders__pic" src="./img/leaders/leaders-3.png" alt="" style="width: 372px;">
+                <img class="leaders__pic" src="./img/leaders/leaders-4.png" alt="">
+              </div>
+
+              <div class="leaders__pictures-2">
+                <img class="leaders__pic" src="./img/leaders/leaders-5.png" alt="">
+                <img class="leaders__pic" src="./img/leaders/leaders-6.png" alt="">
+                <img class="leaders__pic" src="./img/leaders/leaders-7.png" alt="">
+
+                <a class="leaders__pictures-all" href="#">все сертификаты</a>
+              </div>
+            </div>
           </div>
 
-          <div class="leaders__row">
-            <h4 class="leaders__row-title">
-              Готовые решения
+          <div class="leaders__row" data-accordion-item>
 
-              <span>
-                <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path
-                    d="M15 23.5781H9C3.57 23.5781 1.25 21.2581 1.25 15.8281V9.82812C1.25 4.39813 3.57 2.07812 9 2.07812H15C20.43 2.07812 22.75 4.39813 22.75 9.82812V15.8281C22.75 21.2581 20.43 23.5781 15 23.5781ZM9 3.57812C4.39 3.57812 2.75 5.21812 2.75 9.82812V15.8281C2.75 20.4381 4.39 22.0781 9 22.0781H15C19.61 22.0781 21.25 20.4381 21.25 15.8281V9.82812C21.25 5.21812 19.61 3.57812 15 3.57812H9Z"
-                    fill="#F4AD7F" />
-                  <path
-                    d="M10.7397 17.1044C10.5497 17.1044 10.3597 17.0344 10.2097 16.8844C9.91969 16.5944 9.91969 16.1144 10.2097 15.8244L13.2097 12.8244L10.2097 9.82437C9.91969 9.53437 9.91969 9.05437 10.2097 8.76438C10.4997 8.47438 10.9797 8.47438 11.2697 8.76438L14.7997 12.2944C15.0897 12.5844 15.0897 13.0644 14.7997 13.3544L11.2697 16.8844C11.1197 17.0344 10.9297 17.1044 10.7397 17.1044Z"
-                    fill="#F4AD7F" />
-                </svg>
+            <div class="leaders__row-header">
+              <h4 class="leaders__row-title">
+                Готовые решения
 
-              </span>
-            </h4>
+                <span>
+                  <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      d="M15 23.5781H9C3.57 23.5781 1.25 21.2581 1.25 15.8281V9.82812C1.25 4.39813 3.57 2.07812 9 2.07812H15C20.43 2.07812 22.75 4.39813 22.75 9.82812V15.8281C22.75 21.2581 20.43 23.5781 15 23.5781ZM9 3.57812C4.39 3.57812 2.75 5.21812 2.75 9.82812V15.8281C2.75 20.4381 4.39 22.0781 9 22.0781H15C19.61 22.0781 21.25 20.4381 21.25 15.8281V9.82812C21.25 5.21812 19.61 3.57812 15 3.57812H9Z"
+                      fill="#F4AD7F" />
+                    <path
+                      d="M10.7397 17.1044C10.5497 17.1044 10.3597 17.0344 10.2097 16.8844C9.91969 16.5944 9.91969 16.1144 10.2097 15.8244L13.2097 12.8244L10.2097 9.82437C9.91969 9.53437 9.91969 9.05437 10.2097 8.76438C10.4997 8.47438 10.9797 8.47438 11.2697 8.76438L14.7997 12.2944C15.0897 12.5844 15.0897 13.0644 14.7997 13.3544L11.2697 16.8844C11.1197 17.0344 10.9297 17.1044 10.7397 17.1044Z"
+                      fill="#F4AD7F" />
+                  </svg>
 
+                </span>
+              </h4>
+
+              <p class="leaders__row-descr">
+                Мы внедрили более 400 CRM систем и разработали готовые, технологичные решения для различных отраслей
+                бизнеса
+              </p>
+            </div>
+
+            <div class="leaders__row-content">
+              <div class="leaders__pictures">
+                <iframe width="636" height="364" src="https://www.youtube.com/embed/wtvHwxrSezA"
+                  title="YouTube video player" frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  allowfullscreen></iframe>
+              </div>
+
+              <div class="leaders__pictures-2">
+                <a class="leaders__pictures-all leaders__pictures-all--center" href="#">смотреть больше кейсов</a>
+              </div>
+            </div>
           </div>
 
-          <div class="leaders__row">
-            <h4 class="leaders__row-title">
-              Аттестованные сотрудники
+          <div class="leaders__row" data-accordion-item>
 
-              <span>
-                <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path
-                    d="M15 23.5781H9C3.57 23.5781 1.25 21.2581 1.25 15.8281V9.82812C1.25 4.39813 3.57 2.07812 9 2.07812H15C20.43 2.07812 22.75 4.39813 22.75 9.82812V15.8281C22.75 21.2581 20.43 23.5781 15 23.5781ZM9 3.57812C4.39 3.57812 2.75 5.21812 2.75 9.82812V15.8281C2.75 20.4381 4.39 22.0781 9 22.0781H15C19.61 22.0781 21.25 20.4381 21.25 15.8281V9.82812C21.25 5.21812 19.61 3.57812 15 3.57812H9Z"
-                    fill="#F4AD7F" />
-                  <path
-                    d="M10.7397 17.1044C10.5497 17.1044 10.3597 17.0344 10.2097 16.8844C9.91969 16.5944 9.91969 16.1144 10.2097 15.8244L13.2097 12.8244L10.2097 9.82437C9.91969 9.53437 9.91969 9.05437 10.2097 8.76438C10.4997 8.47438 10.9797 8.47438 11.2697 8.76438L14.7997 12.2944C15.0897 12.5844 15.0897 13.0644 14.7997 13.3544L11.2697 16.8844C11.1197 17.0344 10.9297 17.1044 10.7397 17.1044Z"
-                    fill="#F4AD7F" />
-                </svg>
+            <div class="leaders__row-header">
+              <h4 class="leaders__row-title">
+                Сильная команда
 
-              </span>
-            </h4>
+                <span>
+                  <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      d="M15 23.5781H9C3.57 23.5781 1.25 21.2581 1.25 15.8281V9.82812C1.25 4.39813 3.57 2.07812 9 2.07812H15C20.43 2.07812 22.75 4.39813 22.75 9.82812V15.8281C22.75 21.2581 20.43 23.5781 15 23.5781ZM9 3.57812C4.39 3.57812 2.75 5.21812 2.75 9.82812V15.8281C2.75 20.4381 4.39 22.0781 9 22.0781H15C19.61 22.0781 21.25 20.4381 21.25 15.8281V9.82812C21.25 5.21812 19.61 3.57812 15 3.57812H9Z"
+                      fill="#F4AD7F" />
+                    <path
+                      d="M10.7397 17.1044C10.5497 17.1044 10.3597 17.0344 10.2097 16.8844C9.91969 16.5944 9.91969 16.1144 10.2097 15.8244L13.2097 12.8244L10.2097 9.82437C9.91969 9.53437 9.91969 9.05437 10.2097 8.76438C10.4997 8.47438 10.9797 8.47438 11.2697 8.76438L14.7997 12.2944C15.0897 12.5844 15.0897 13.0644 14.7997 13.3544L11.2697 16.8844C11.1197 17.0344 10.9297 17.1044 10.7397 17.1044Z"
+                      fill="#F4AD7F" />
+                  </svg>
 
+                </span>
+              </h4>
+
+              <p class="leaders__row-descr">
+                Наш самый главный ресурс это крепкая команда объединённая едиными целями и ценностями.
+              </p>
+
+              <p class="leaders__row-descr">
+                Все сотрудники нашей компании на постоянной основе проходят необходимые обучения и подтверждают свою
+                компетенцию соответствующими сертификатами.
+              </p>
+            </div>
+
+            <div class="leaders__row-content">
+              <div class="leaders__pictures">
+                <img class="leaders__pic" src="./img/leaders/leaders-comand.png" alt=""
+                  style="min-height: 200px;max-width: 100%;">
+              </div>
+
+              <div class="leaders__pictures-2">
+                <img class="leaders__pic" src="./img/leaders/leaders-5.png" alt="">
+                <img class="leaders__pic" src="./img/leaders/leaders-6.png" alt="">
+                <img class="leaders__pic" src="./img/leaders/leaders-7.png" alt="">
+
+                <a class="leaders__pictures-all" href="#">все сертификаты</a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
 
-      <div class="leaders__pictures">
-        <img class="leaders__pic" src="./img/leaders/leaders-1.png" alt="">
-        <img class="leaders__pic" src="./img/leaders/leaders-2.png" alt="">
-      </div>
+
     </div>
   </div>
 </div>
