added new pages

--- a/src/html/_settings.html
+++ b/src/html/_settings.html
@@ -295,6 +295,271 @@
           <a class="settings__graphic-btn primary-btn" href="#">заказать</a>
         </div>
       </div>
+
+      <div class="settings__hourglass">
+        <h3 class="settings__hourglass-title main-title">
+          Что входит<br> в техническую <br> поддержку?
+        </h3>
+
+        <ul class="settings__hourglass-list">
+          <li class="settings__hourglass-litem">Мониторинг доступности корпоративного портала.</li>
+          <li class="settings__hourglass-litem">Внедрение, интеграция и технические доработки продукта.</li>
+          <li class="settings__hourglass-litem">Отчет по эффективности работы Битрикс24 в конце месяца.</li>
+          <li class="settings__hourglass-litem">Восстановление Битрикс24 и установленных дополнительных модулей.</li>
+          <li class="settings__hourglass-litem">Администрирование канала, обновление и расширение продукта.</li>
+        </ul>
+
+        <div class="settings__hourglass-picture">
+          <p class="settings__hourglass-label">
+            Неиспользованные часы технической поддержки
+            <span>
+              не сгорают
+            </span>
+          </p>
+
+          <img class="settings__hourglass-pic" src="./img/settings/settings-hourglass.svg" alt="">
+        </div>
+      </div>
+
+      <div class="integrated__info settings__integrated-info">
+
+        <div class="integrated__texts">
+          <p class="integrated__text">
+            Ключевые инструменты бизнеса должны работать корректно и без перебоев.
+          </p>
+
+          <p class="integrated__text integrated__text--grey">
+            Если вы уже внедрили Битрикс24,<br>
+            подключите техническую поддержку KISELEV GROUP
+          </p>
+
+        </div>
+
+        <div class="integrated__video about__video">
+          <iframe width="584" height="334" src="https://www.youtube.com/embed/wtvHwxrSezA" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen>
+          </iframe>
+        </div>
+      </div>
+
+      <div class="settings__info">
+        <ul class="settings__info-list">
+          <li class="settings__info-item">
+            <img class="settings__info-icon" src="./img/settings/settings-info-1.svg" alt="">
+
+            <h4 class="settings__info-title">
+              Оперативная консультация
+            </h4>
+
+            <p class="settings__info-descr">
+              Клиенты технической поддержки получают оперативную консультацию в случае возникновения ошибок или проблем
+              с Битрикс24
+            </p>
+          </li>
+
+          <li class="settings__info-item">
+            <img class="settings__info-icon" src="./img/settings/settings-info-2.svg" alt="">
+
+            <h4 class="settings__info-title">
+              Новейшиеи нструменты
+            </h4>
+
+            <p class="settings__info-descr">
+              Битиркс24 обновляется не менее двух раз в год, интеграторы создают для него приложения ежемесячно, клиенты
+              подключившие техническую поддержку находятся в курсе всех новых инструментов для автоматизации бизнеса
+            </p>
+          </li>
+
+          <li class="settings__info-item">
+            <img class="settings__info-icon" src="./img/settings/settings-info-3.svg" alt="">
+
+            <h4 class="settings__info-title">
+              Время руководителя
+            </h4>
+
+            <p class="settings__info-descr">
+              Техническая поддержка Битрикс24 помогает руководителям высвободить рабочее время, так как, им не
+              приходится тратить его на мониторинг корректной работы сотрудников в системе
+            </p>
+          </li>
+        </ul>
+      </div>
+
+      <div class="settings__faq">
+        <ul class="settings__faq-list" data-faq-list>
+          <li class="settings__faq-item" data-faq-item>
+            <h4 class="settings__faq-item-title">
+              По каким вопросам можно обратиться к специалисту технической поддержки?
+
+
+              <svg width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M24.6014 9.39893C28.7945 13.5921 28.7945 20.4086 24.6014 24.6017C20.4083 28.7949 13.5917 28.7949 9.3986 24.6017C5.20546 20.4086 5.20546 13.5921 9.3986 9.39893C13.5917 5.20579 20.4083 5.20579 24.6014 9.39893ZM10.4593 23.5411C14.0655 27.1473 19.9345 27.1473 23.5407 23.5411C27.147 19.9348 27.147 14.0658 23.5407 10.4596C19.9345 6.85335 14.0655 6.85335 10.4593 10.4596C6.85302 14.0658 6.85302 19.9348 10.4593 23.5411Z"
+                  fill="#8F8F92" />
+                <path
+                  d="M14.7016 13.6428L20.3585 19.2996C20.6484 19.5895 20.6484 20.0704 20.3585 20.3603C20.0685 20.6502 19.5877 20.6502 19.2978 20.3603L13.6409 14.7034C13.351 14.4135 13.351 13.9327 13.6409 13.6428C13.9309 13.3529 14.4117 13.3529 14.7016 13.6428Z"
+                  fill="#8F8F92" />
+                <path
+                  d="M20.3591 13.6428C20.649 13.9327 20.649 14.4135 20.3591 14.7034L14.7022 20.3603C14.4123 20.6502 13.9315 20.6502 13.6415 20.3603C13.3516 20.0704 13.3516 19.5895 13.6415 19.2996L19.2984 13.6428C19.5883 13.3529 20.0691 13.3529 20.3591 13.6428Z"
+                  fill="#8F8F92" />
+              </svg>
+
+            </h4>
+
+            <p class="settings__faq-descr">
+              Мы внедряем БИТРИКС24, это СRМ система которая занимает первое место среди инструментов для автоматизации
+              бизнеса. Битрикс24-это уникальный продукт который подходит практически для.
+            </p>
+          </li>
+
+          <li class="settings__faq-item" data-faq-item>
+            <h4 class="settings__faq-item-title">
+              У меня уже настроена система, нам провели обучение, зачем мне техническая поддержка?
+
+
+              <svg width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M24.6014 9.39893C28.7945 13.5921 28.7945 20.4086 24.6014 24.6017C20.4083 28.7949 13.5917 28.7949 9.3986 24.6017C5.20546 20.4086 5.20546 13.5921 9.3986 9.39893C13.5917 5.20579 20.4083 5.20579 24.6014 9.39893ZM10.4593 23.5411C14.0655 27.1473 19.9345 27.1473 23.5407 23.5411C27.147 19.9348 27.147 14.0658 23.5407 10.4596C19.9345 6.85335 14.0655 6.85335 10.4593 10.4596C6.85302 14.0658 6.85302 19.9348 10.4593 23.5411Z"
+                  fill="#8F8F92" />
+                <path
+                  d="M14.7016 13.6428L20.3585 19.2996C20.6484 19.5895 20.6484 20.0704 20.3585 20.3603C20.0685 20.6502 19.5877 20.6502 19.2978 20.3603L13.6409 14.7034C13.351 14.4135 13.351 13.9327 13.6409 13.6428C13.9309 13.3529 14.4117 13.3529 14.7016 13.6428Z"
+                  fill="#8F8F92" />
+                <path
+                  d="M20.3591 13.6428C20.649 13.9327 20.649 14.4135 20.3591 14.7034L14.7022 20.3603C14.4123 20.6502 13.9315 20.6502 13.6415 20.3603C13.3516 20.0704 13.3516 19.5895 13.6415 19.2996L19.2984 13.6428C19.5883 13.3529 20.0691 13.3529 20.3591 13.6428Z"
+                  fill="#8F8F92" />
+              </svg>
+
+            </h4>
+
+            <p class="settings__faq-descr">
+              Мы внедряем БИТРИКС24, это СRМ система которая занимает первое место среди инструментов для автоматизации
+              бизнеса. Битрикс24-это уникальный продукт который подходит практически для.
+            </p>
+          </li>
+
+          <li class="settings__faq-item" data-faq-item>
+            <h4 class="settings__faq-item-title">
+              Как выбрать нужный пакет техподдержки?
+
+
+              <svg width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M24.6014 9.39893C28.7945 13.5921 28.7945 20.4086 24.6014 24.6017C20.4083 28.7949 13.5917 28.7949 9.3986 24.6017C5.20546 20.4086 5.20546 13.5921 9.3986 9.39893C13.5917 5.20579 20.4083 5.20579 24.6014 9.39893ZM10.4593 23.5411C14.0655 27.1473 19.9345 27.1473 23.5407 23.5411C27.147 19.9348 27.147 14.0658 23.5407 10.4596C19.9345 6.85335 14.0655 6.85335 10.4593 10.4596C6.85302 14.0658 6.85302 19.9348 10.4593 23.5411Z"
+                  fill="#8F8F92" />
+                <path
+                  d="M14.7016 13.6428L20.3585 19.2996C20.6484 19.5895 20.6484 20.0704 20.3585 20.3603C20.0685 20.6502 19.5877 20.6502 19.2978 20.3603L13.6409 14.7034C13.351 14.4135 13.351 13.9327 13.6409 13.6428C13.9309 13.3529 14.4117 13.3529 14.7016 13.6428Z"
+                  fill="#8F8F92" />
+                <path
+                  d="M20.3591 13.6428C20.649 13.9327 20.649 14.4135 20.3591 14.7034L14.7022 20.3603C14.4123 20.6502 13.9315 20.6502 13.6415 20.3603C13.3516 20.0704 13.3516 19.5895 13.6415 19.2996L19.2984 13.6428C19.5883 13.3529 20.0691 13.3529 20.3591 13.6428Z"
+                  fill="#8F8F92" />
+              </svg>
+
+            </h4>
+
+            <p class="settings__faq-descr">
+              Мы внедряем БИТРИКС24, это СRМ система которая занимает первое место среди инструментов для автоматизации
+              бизнеса. Битрикс24-это уникальный продукт который подходит практически для.
+            </p>
+          </li>
+
+          <li class="settings__faq-item" data-faq-item>
+            <h4 class="settings__faq-item-title">
+              Что будет, если я куплю часы, но не успею их использовать?
+
+
+              <svg width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M24.6014 9.39893C28.7945 13.5921 28.7945 20.4086 24.6014 24.6017C20.4083 28.7949 13.5917 28.7949 9.3986 24.6017C5.20546 20.4086 5.20546 13.5921 9.3986 9.39893C13.5917 5.20579 20.4083 5.20579 24.6014 9.39893ZM10.4593 23.5411C14.0655 27.1473 19.9345 27.1473 23.5407 23.5411C27.147 19.9348 27.147 14.0658 23.5407 10.4596C19.9345 6.85335 14.0655 6.85335 10.4593 10.4596C6.85302 14.0658 6.85302 19.9348 10.4593 23.5411Z"
+                  fill="#8F8F92" />
+                <path
+                  d="M14.7016 13.6428L20.3585 19.2996C20.6484 19.5895 20.6484 20.0704 20.3585 20.3603C20.0685 20.6502 19.5877 20.6502 19.2978 20.3603L13.6409 14.7034C13.351 14.4135 13.351 13.9327 13.6409 13.6428C13.9309 13.3529 14.4117 13.3529 14.7016 13.6428Z"
+                  fill="#8F8F92" />
+                <path
+                  d="M20.3591 13.6428C20.649 13.9327 20.649 14.4135 20.3591 14.7034L14.7022 20.3603C14.4123 20.6502 13.9315 20.6502 13.6415 20.3603C13.3516 20.0704 13.3516 19.5895 13.6415 19.2996L19.2984 13.6428C19.5883 13.3529 20.0691 13.3529 20.3591 13.6428Z"
+                  fill="#8F8F92" />
+              </svg>
+
+            </h4>
+
+            <p class="settings__faq-descr">
+              Мы внедряем БИТРИКС24, это СRМ система которая занимает первое место среди инструментов для автоматизации
+              бизнеса. Битрикс24-это уникальный продукт который подходит практически для.
+            </p>
+          </li>
+
+          <li class="settings__faq-item" data-faq-item>
+            <h4 class="settings__faq-item-title">
+              Что будет, если я куплю часы, но не успею их использовать?
+
+
+              <svg width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M24.6014 9.39893C28.7945 13.5921 28.7945 20.4086 24.6014 24.6017C20.4083 28.7949 13.5917 28.7949 9.3986 24.6017C5.20546 20.4086 5.20546 13.5921 9.3986 9.39893C13.5917 5.20579 20.4083 5.20579 24.6014 9.39893ZM10.4593 23.5411C14.0655 27.1473 19.9345 27.1473 23.5407 23.5411C27.147 19.9348 27.147 14.0658 23.5407 10.4596C19.9345 6.85335 14.0655 6.85335 10.4593 10.4596C6.85302 14.0658 6.85302 19.9348 10.4593 23.5411Z"
+                  fill="#8F8F92" />
+                <path
+                  d="M14.7016 13.6428L20.3585 19.2996C20.6484 19.5895 20.6484 20.0704 20.3585 20.3603C20.0685 20.6502 19.5877 20.6502 19.2978 20.3603L13.6409 14.7034C13.351 14.4135 13.351 13.9327 13.6409 13.6428C13.9309 13.3529 14.4117 13.3529 14.7016 13.6428Z"
+                  fill="#8F8F92" />
+                <path
+                  d="M20.3591 13.6428C20.649 13.9327 20.649 14.4135 20.3591 14.7034L14.7022 20.3603C14.4123 20.6502 13.9315 20.6502 13.6415 20.3603C13.3516 20.0704 13.3516 19.5895 13.6415 19.2996L19.2984 13.6428C19.5883 13.3529 20.0691 13.3529 20.3591 13.6428Z"
+                  fill="#8F8F92" />
+              </svg>
+
+            </h4>
+
+            <p class="settings__faq-descr">
+              Мы внедряем БИТРИКС24, это СRМ система которая занимает первое место среди инструментов для автоматизации
+              бизнеса. Битрикс24-это уникальный продукт который подходит практически для.
+            </p>
+          </li>
+
+          <li class="settings__faq-item" data-faq-item>
+            <h4 class="settings__faq-item-title">
+              Как будет организован процесс работы со специалистом техподдержки?
+
+
+              <svg width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M24.6014 9.39893C28.7945 13.5921 28.7945 20.4086 24.6014 24.6017C20.4083 28.7949 13.5917 28.7949 9.3986 24.6017C5.20546 20.4086 5.20546 13.5921 9.3986 9.39893C13.5917 5.20579 20.4083 5.20579 24.6014 9.39893ZM10.4593 23.5411C14.0655 27.1473 19.9345 27.1473 23.5407 23.5411C27.147 19.9348 27.147 14.0658 23.5407 10.4596C19.9345 6.85335 14.0655 6.85335 10.4593 10.4596C6.85302 14.0658 6.85302 19.9348 10.4593 23.5411Z"
+                  fill="#8F8F92" />
+                <path
+                  d="M14.7016 13.6428L20.3585 19.2996C20.6484 19.5895 20.6484 20.0704 20.3585 20.3603C20.0685 20.6502 19.5877 20.6502 19.2978 20.3603L13.6409 14.7034C13.351 14.4135 13.351 13.9327 13.6409 13.6428C13.9309 13.3529 14.4117 13.3529 14.7016 13.6428Z"
+                  fill="#8F8F92" />
+                <path
+                  d="M20.3591 13.6428C20.649 13.9327 20.649 14.4135 20.3591 14.7034L14.7022 20.3603C14.4123 20.6502 13.9315 20.6502 13.6415 20.3603C13.3516 20.0704 13.3516 19.5895 13.6415 19.2996L19.2984 13.6428C19.5883 13.3529 20.0691 13.3529 20.3591 13.6428Z"
+                  fill="#8F8F92" />
+              </svg>
+
+            </h4>
+
+            <p class="settings__faq-descr">
+              Мы внедряем БИТРИКС24, это СRМ система которая занимает первое место среди инструментов для автоматизации
+              бизнеса. Битрикс24-это уникальный продукт который подходит практически для.
+            </p>
+          </li>
+
+        </ul>
+
+        <div class="settings__faq-info">
+          <h3 class="settings__faq-title main-title">
+            Отвечаем на вопросы
+          </h3>
+
+          <div class="settings__faq-texts">
+            <p class="settings__faq-text">
+              Благодаря комплексной работе, каждый из наших клиентов увеличил прибыль в среднем на 24%.
+            </p>
+
+            <p class="settings__faq-text">
+              Мы анализируем
+              ваши бизнес процессы, настраиваем CRM систему Bitrix24 и обучаем ваших сотрудников
+            </p>
+          </div>
+
+          <img class="settings__faq-pic" src="./img/settings/settings-faq.svg" alt="">
+        </div>
+      </div>
     </div>
   </div>
 </section>
