--- a/src/html/_footer.html
+++ b/src/html/_footer.html
@@ -37,6 +37,41 @@
                 г. Екатеринбург, ул. Щорса, д.57, оф.6
               </p>
             </li>
+
+            <li class="footer__item">
+              <div class="footer__socials">
+                <h4 class="footer__socials-title">
+                  Подписывайтесь на канал ютуб <br>
+                  и другие соц.медиа
+                </h4>
+
+                <ul class="footer__socials-list">
+                  <li class="footer__socials-item">
+                    <a class="footer__socials-link" href="#">
+                      <img class="footer__socials-img" src="./img/socials/socials-1.svg" alt="">
+                    </a>
+                  </li>
+
+                  <li class="footer__socials-item">
+                    <a class="footer__socials-link" href="#">
+                      <img class="footer__socials-img" src="./img/socials/socials-2.svg" alt="">
+                    </a>
+                  </li>
+
+                  <li class="footer__socials-item">
+                    <a class="footer__socials-link" href="#">
+                      <img class="footer__socials-img" src="./img/socials/socials-3.svg" alt="">
+                    </a>
+                  </li>
+
+                  <li class="footer__socials-item">
+                    <a class="footer__socials-link" href="#">
+                      <img class="footer__socials-img" src="./img/socials/socials-4.svg" alt="">
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
           </ul>
 
           <ul class="footer__list">
@@ -72,7 +107,7 @@
           </ul>
         </div>
 
-        <div class="footer__socials">
+        <!-- <div class="footer__socials">
           <h4 class="footer__socials-title">
             Подписывайтесь на канал ютуб <br>
             и другие соц.медиа
@@ -103,7 +138,7 @@
               </a>
             </li>
           </ul>
-        </div>
+        </div> -->
       </div>
 
       <div class="footer__bottom">
