--- a/src/html/_leaders.html
+++ b/src/html/_leaders.html
@@ -69,8 +69,8 @@
 
             <div class="leaders__row-content">
               <div class="leaders__pictures">
-                <img class="leaders__pic" src="./img/leaders/leaders-3.png" alt="" style="width: 372px;">
-                <img class="leaders__pic" src="./img/leaders/leaders-4.png" alt="">
+                <img class="leaders__pic" src="./img/leaders/leaders-3.png" alt="" style="width: 372px; height: 264px;">
+                <img class="leaders__pic" src="./img/leaders/leaders-4.png" alt="" style="height: 264px;">
               </div>
 
               <div class="leaders__pictures-2">
