--- a/src/html/_map.html
+++ b/src/html/_map.html
@@ -23,7 +23,7 @@
           </div>
 
           <h4 class="map__info-title">
-            Посетите экскурсию<br> в нашу идеально<br> настроенную СРМ систему
+            Посетите экскурсию<br> в нашу идеально настроенную<br> СРМ систему
           </h4>
 
           <a class="map__info-link primary-btn" href="#">записаться</a>
