--- a/src/html/_subscription-experts.html
+++ b/src/html/_subscription-experts.html
@@ -12,7 +12,49 @@
         </p>
       </div>
 
-      <div class="subscription-experts__videos">
+      <div class="subscription-experts__videos" data-youtube-videos>
+        <div class="subscription-experts__video">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/6KtYH-YYQNU" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
+        </div>
+
+        <div class="subscription-experts__video">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/MSzlWGWGoaY" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
+        </div>
+
+        <div class="subscription-experts__video">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/bPlNuR8xIC0" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
+        </div>
+
+        <div class="subscription-experts__video">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/6KtYH-YYQNU" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
+        </div>
+
+        <div class="subscription-experts__video">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/MSzlWGWGoaY" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
+        </div>
+
+        <div class="subscription-experts__video">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/bPlNuR8xIC0" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
+        </div>
+
         <div class="subscription-experts__video">
           <iframe width="560" height="315" src="https://www.youtube.com/embed/6KtYH-YYQNU" title="YouTube video player"
             frameborder="0"
@@ -36,7 +78,7 @@
       </div>
 
       <div class="subscription-experts__links">
-        <a class="subscription-experts__link secondary-btn" href="#">Показать еще</a>
+        <div class="subscription-experts__link secondary-btn" data-youtube-videos-btn>Показать еще</div>
         <a class="subscription-experts__link primary-btn" href="#">перейти на канал</a>
       </div>
     </div>
