added hover border and fixed bg image

--- a/src/html/_portal-setup.html
+++ b/src/html/_portal-setup.html
@@ -15,7 +15,7 @@
 
       <ul class="portal-setup__list">
         <li class="portal-setup__item grid-column-6"
-          style="background-image: url('../img/portal-setup/portal-setup-item-1.png');">
+          style="background-image: url('./img/portal-setup/portal-setup-item-1.png');">
           <h4 class="portal-setup__item-title">
             Интеграция Битрикс24 с сайтом
           </h4>
@@ -107,7 +107,7 @@
         </li>
 
         <li class="portal-setup__item grid-column-3"
-          style="background-image: url('../img/portal-setup/portal-setup-item-2.png');">
+          style="background-image: url('./img/portal-setup/portal-setup-item-2.png');">
           <h4 class="portal-setup__item-title">
             Интеграция Битрикс24 с почтой
           </h4>
@@ -140,7 +140,7 @@
         </li>
 
         <li class="portal-setup__item grid-column-3"
-          style="background-image: url('../img/portal-setup/portal-setup-item-3.png');">
+          style="background-image: url('./img/portal-setup/portal-setup-item-3.png');">
           <h4 class="portal-setup__item-title">
             Интеграция Битрикс 24 с телефонией
           </h4>
