--- a/src/html/_technical-task.html
+++ b/src/html/_technical-task.html
@@ -160,13 +160,13 @@
               </div>
 
               <div class="tariffs__prices-prices">
-                <strike class="tariffs__prices-old">36 000</strike>
+                <!-- <strike class="tariffs__prices-old">36 000</strike> -->
 
                 <div class="tariffs__prices-new">
-                  29 500 <span>₽</span>
+                  30 000 <span>₽</span>
                 </div>
 
-                <div class="tariffs__prices-discont">-8%</div>
+                <!-- <div class="tariffs__prices-discont">-8%</div> -->
               </div>
 
               <a class="tariffs__prices-btn primary-btn" href="#">попробовать</a>
@@ -229,13 +229,13 @@
               </div>
 
               <div class="tariffs__prices-prices">
-                <strike class="tariffs__prices-old">36 000</strike>
+                <!-- <strike class="tariffs__prices-old">36 000</strike> -->
 
                 <div class="tariffs__prices-new">
-                  49 500 <span>₽</span>
+                  50 000 <span>₽</span>
                 </div>
 
-                <div class="tariffs__prices-discont">-8%</div>
+                <!-- <div class="tariffs__prices-discont">-8%</div> -->
               </div>
 
               <a class="tariffs__prices-btn primary-btn" href="#">попробовать</a>
@@ -303,18 +303,18 @@
                 <img src="./img/calendar.svg" alt="calendar">
 
                 <div class="tariffs__prices-calendar-days">
-                  2-5 дней
+                  10-14 дней
                 </div>
               </div>
 
               <div class="tariffs__prices-prices">
-                <strike class="tariffs__prices-old">36 000</strike>
+                <!-- <strike class="tariffs__prices-old">36 000</strike> -->
 
                 <div class="tariffs__prices-new">
-                  29 500 <span>₽</span>
+                  80 000 <span>₽</span>
                 </div>
 
-                <div class="tariffs__prices-discont">-15%</div>
+                <!-- <div class="tariffs__prices-discont">-15%</div> -->
               </div>
 
               <a class="tariffs__prices-btn primary-btn" href="#">попробовать</a>
