fixed and added

--- a/src/main-2.html
+++ b/src/main-2.html
@@ -21,6 +21,7 @@
     @@include('./html/_leaders.html')
     <!-- @@include('./html/_services.html') -->
     @@include('./html/_new-services.html')
+    @@include('./html/_get-quote.html')
     @@include('./html/_calculation.html')
     @@include('./html/_subscription-experts.html')
     @@include('./html/_cases.html')
